v2/docs/References/投稿テンプレートの引数.md
## 現在YouTubeで使えるテンプレート引数

### 【YouTube新着動画通知】
（yt_new_video_template.txt、`新着動画`）

- `{{ title }}` … 動画タイトル
- `{{ video_id }}` … 動画ID
- `{{ video_url }}` … 動画URL（例: https://www.youtube.com/watch?v=xxxx）
- `{{ channel_name }}` … チャンネル名
- `{{ published_at }}` … 公開日時（ISO8601形式、例: 2025-12-18T10:30:00）

---

### 【YouTube配信開始通知】
（対応予定）

- `{{ title }}` … 配信タイトル
- `{{ video_url }}` … 配信URL（例: https://www.youtube.com/watch?v=xxxx）
- `{{ channel_name }}` … チャンネル名
- `{{ live_status }}` … ライブ配信ステータス

---

### 【YouTube配信終了通知】
（対応予定）

- `{{ title }}` … 配信タイトル
- `{{ video_url }}` … 配信URL
- `{{ channel_name }}` … チャンネル名

---

## 現在ニコニコで使えるテンプレート引数

### 【ニコニコ動画投稿通知】
（nico_new_video_template.txt、`新着動画`）

- `{{ title }}` … 動画タイトル
- `{{ video_id }}` … 動画ID
- `{{ video_url }}` … 動画URL
- `{{ channel_name }}` … ユーザー名またはチャンネル名（`settings.env` の `NICONICO_USER_NAME` から取得）
- `{{ published_at }}` … 公開日時（ISO8601形式、例: 2025-12-18T10:30:00）

**ご注意**: ニコニコのユーザー名は以下の優先順位で自動取得されます：
1. RSS フィード（`<dc:creator>`）
2. ニコニコ静画 API
3. ユーザーページの og:title
4. `NICONICO_USER_NAME` 環境変数
5. ユーザーID（上記全て失敗時）

取得されたユーザー名は `settings.env` に自動保存されるため、2回目以降は環境変数から直接読み込まれます。

---

## 現在Twitchで使えるテンプレート引数

### 【放送開始（stream.online）】
（対応予定）

- `{{ broadcaster_user_login}}` … 配信者のログイン名（英数字ID）
- `{{ broadcaster_user_name }}` … 配信者の表示名（日本語/英語名）
- `{{ title }}` … 放送タイトル
- `{{ category_name }}` … カテゴリ名（例: Just Chatting）
- `{{ game_name }}` … ゲーム名（通常はcategory_nameと同じ）
- `{{ started_at }}` … 放送開始日時（サーバー受信時刻、ISO8601形式）
- `{{ stream_url }}` … 視聴URL（例: https://twitch.tv/xxxx）

---

### 【放送終了（stream.offline）】
（対応予定）

- `{{ broadcaster_user_login }}`
- `{{ broadcaster_user_name }}`
- `{{ channel_url }}` … チャンネルURL（例: https://twitch.tv/xxxx）
- `{{ ended_at }}` … 放送終了日時（サーバー受信時刻、ISO8601形式）
- `{{ to_broadcaster_user_name }}` … Raid先の配信者名（Raid時のみ）
- `{{ to_broadcaster_user_login }}` … Raid先のログイン名（Raid時のみ）
- `{{ to_stream_url }}` … Raid先の配信URL（Raid時のみ）

---

### 【Raidによる配信終了（channel.raid outgoing）】
（対応予定）

- `{{ from_broadcaster_user_login }}` … Raid元の配信者ログイン名
- `{{ from_broadcaster_user_name }}` … Raid元の配信者表示名
- `{{ to_broadcaster_user_login }}` … Raid先の配信者ログイン名
- `{{ to_broadcaster_user_name }}` … Raid先の配信者表示名
- `{{ raid_url }}` … Raid先の配信URL（https://twitch.tv/{{ to_broadcaster_user_login }}）

---

## 汎用テンプレート例

### 【テンプレート内で使える機能】

#### 1. 変数挿入
```jinja2
{{ title }}
{{ video_url }}
```

#### 2. フィルター（変数を加工）
```jinja2
# 日付をフォーマット
{{ published_at | datetimeformat('%Y年%m月%d日') }}
# 結果: 2025年12月18日

# 文字列を大文字に
{{ title | upper }}
# 結果: NEW VIDEO TITLE

# 文字列を小文字に
{{ title | lower }}
# 結果: new video title
```

#### 3. 条件分岐
```jinja2
{% if "特定の単語" in title %}
このタイトルには「特定の単語」が含まれています
{% else %}
他のタイトルです
{% endif %}
```

### 【YouTube新着動画テンプレート実装例】

```jinja2
🎬 {{ title }}
チャンネル: {{ channel_name }}
公開日: {{ published_at | datetimeformat('%Y年%m月%d日') }}
{{ video_url }}

#YouTube #新作動画
```

### 【ニコニコ新着動画テンプレート実装例】

```jinja2
新作投稿！

{{ title }}
投稿者: {{ channel_name }}
投稿日: {{ published_at | datetimeformat('%Y年%m月%d日') }}
{{ video_url }}

#ニコニコ動画
```

### 【Twitch配信終了通知の汎用テンプレート例（Raid対応）】

```
🛑 Twitch 配信終了

{{ broadcaster_user_name | default('配信者名不明') }} さんのTwitch配信が終わりました。
チャンネル: {{ channel_url | default('チャンネルURL不明') }}
終了時刻: {{ ended_at | datetimeformat }}

{% if to_broadcaster_user_name %}
---
Raid先: {{ to_broadcaster_user_name }}（{{ to_stream_url }}）
{% endif %}

またの配信をお楽しみに！
#Twitch #配信終了
```

- `to_broadcaster_user_name` などRaid関連変数が存在する場合のみRaid情報が表示されます。
- 通常終了時はRaid部分は表示されません。
- Jinja2の`{% if %}`構文で柔軟にカスタマイズ可能です。

---

## 📚 参考情報

### テンプレートファイルの場所

```
v2/
├── templates/
│   ├── youtube/
│   │   ├── yt_new_video_template.txt      ← 新着動画投稿用
│   │   ├── yt_online_template.txt         ← 配信開始用（将来）
│   │   └── yt_offline_template.txt        ← 配信終了用（将来）
│   ├── niconico/
│   │   └── nico_new_video_template.txt    ← 新着動画投稿用
│   └── .templates/
│       └── default_template.txt           ← フォールバック用
```

### テンプレート編集方法

1. **テキストエディタで直接編集**（Windows: メモ帳、VS Code、Mac/Linux: vim, nano など）
2. **GUI テンプレートエディタ**（アプリケーション起動時の管理画面）

### 環境変数の設定

`settings.env` でテンプレートパスを指定：

```env
# YouTube 新着動画テンプレート
TEMPLATE_YOUTUBE_NEW_VIDEO_PATH=templates/youtube/yt_new_video_template.txt

# ニコニコ新着動画テンプレート
TEMPLATE_NICO_NEW_VIDEO_PATH=templates/niconico/nico_new_video_template.txt
```

### テンプレートが反映されない場合

1. ファイルが保存されているか確認
2. `settings.env` で正しく設定されているか確認
3. アプリケーションを再起動
4. `v2/logs/` フォルダのログファイルを確認

---

> **詳細情報**: 完全なテンプレートシステムの説明は [v2/docs/Technical/TEMPLATE_SYSTEM.md](../Technical/TEMPLATE_SYSTEM.md) をご参照ください
